# task-inclusion-estimation

./: .gitignore  LICENSE  README.md  pyproject.toml
images/: data_model
scripts/: launch_dump_embeddings.sh  launch_finetuning.sh  launch_information_sufficiency.sh
src/: utils.py
src/dump_embeddings/: dump.py
src/finetunings/: args.py  classes.py  evaluator.py  llm_inference.py  llm_training.py  utils.py
src/finetunings/data/: __init__.py  onto_notes_dataset.py
src/information_sufficiency/: hierarchical.py  utils.py
src/information_sufficiency/configurations/: knife_arguments.json
src/task_vectors/: __init__.py  load_model.py  metrics.py
